--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -723,7 +723,8 @@ html, body {
     font-size: 20px;
     font-weight: 400;
     line-height: 28px;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    max-width: 630px; }
   .article__subhead {
     font-family: "Raleway", sans-serif;
     font-size: 16px;
@@ -733,18 +734,42 @@ html, body {
     letter-spacing: 0.5px;
     margin: 50px 0 20px; }
   .article__text {
+    max-width: 630px;
     font-family: "Raleway", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 28px;
-    color: rgba(0, 0, 0, 0.7);
+    color: #000;
     margin-bottom: 20px; }
   .article__link {
     color: #e56b36;
     text-decoration: none; }
+  .article__button {
+    display: block;
+    box-sizing: border-box;
+    padding: 16px 24px 15px;
+    border: 1px solid rgba(229, 107, 54, 0.5);
+    background-color: transparent;
+    font-family: "Raleway", sans-serif;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 12px;
+    color: #e56b36;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 2px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    width: 204px;
+    text-align: center;
+    margin-top: 40px; }
+    .article__button:hover {
+      background-color: #e56b36;
+      color: #fff; }
   .article__list {
     list-style-type: none;
-    counter-reset: num; }
+    counter-reset: num;
+    max-width: 630px; }
     .article__list .article__item:before {
       content: counter(num) ". ";
       counter-increment: num;
@@ -769,6 +794,48 @@ html, body {
     margin-bottom: 20px;
     margin-left: 35px; }
 
+.icons {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  justify-content: space-between;
+  max-width: 630px;
+  margin-top: 40px;
+  list-style-type: none; }
+  .icons__item {
+    display: block;
+    min-width: 204px;
+    margin-right: 12px; }
+    .icons__item:last-child {
+      margin-right: 0; }
+  .icons__text {
+    font-family: "Raleway", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 14px;
+    color: #000;
+    padding-left: 40px;
+    margin-bottom: 14px; }
+    .icons__text:before {
+      content: '';
+      display: block;
+      position: absolute;
+      margin-left: -40px;
+      width: 26px;
+      height: 19px;
+      background-position: center center;
+      background-repeat: no-repeat; }
+    .icons__text--is-towel:before {
+      background-image: url(../../_assets/img/_studios/bourg/icons/towel.svg); }
+    .icons__text--is-change:before {
+      background-image: url(../..//_assets/img/_studios/bourg/icons/change.svg); }
+    .icons__text--is-shop:before {
+      background-image: url(../../_assets/img/_studios/bourg/icons/shop.svg); }
+    .icons__text--is-spa:before {
+      background-image: url(../../_assets/img/_studios/bourg/icons/spa.svg); }
+
 .shedule {
   display: -webkit-flex;
   display: -moz-flex;
@@ -776,17 +843,36 @@ html, body {
   display: -o-flex;
   display: flex;
   justify-content: space-between;
+  max-width: 630px;
+  margin-top: 24px;
   list-style-type: none; }
   .shedule__item {
     display: block;
-    width: 161px;
-    margin-right: 13px; }
+    width: 204px;
+    margin-right: 12px; }
     .shedule__item:last-child {
       margin-right: 0; }
     .shedule__item:first-child {
       margin-left: -12px; }
-      .shedule__item:first-child .shedule__date, .shedule__item:first-child .shedule__type, .shedule__item:first-child .shedule__trainer {
+      .shedule__item:first-child .shedule__date, .shedule__item:first-child .shedule__type, .shedule__item:first-child .shedule__trainer, .shedule__item:first-child .shedule__caption {
         border-left: 0; }
+  .shedule__caption {
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 16px;
+    color: #000;
+    padding-left: 12px;
+    border-left: 1px solid rgba(0, 0, 0, 0.2);
+    margin-bottom: 14px; }
+  .shedule__text {
+    font-family: "Raleway", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 14px;
+    color: #000;
+    padding-left: 12px;
+    margin-bottom: 14px; }
   .shedule__date {
     font-family: "Raleway", sans-serif;
     font-size: 16px;
@@ -811,6 +897,21 @@ html, body {
     line-height: 16px;
     color: #000;
     padding-left: 12px; }
+
+.images {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  margin-top: 40px; }
+  .images__item {
+    display: block;
+    width: 204px;
+    height: 204px;
+    box-shadow: 0 35px 20px -36px rgba(0, 0, 0, 0.8);
+    margin-right: 12px;
+    margin-bottom: 13px; }
 
 .trainers {
   display: -webkit-flex;
@@ -1287,5 +1388,11 @@ html, body {
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center top; }
+    .l-container__column--has-nopad {
+      padding-left: 0; }
+
+.map {
+  width: 100%;
+  height: 100%; }
 
 /*# sourceMappingURL=style.css.map */
