инвертировал кнопку на странице студии в бурге

--- a/_assets/css/__modules/_article.scss
+++ b/_assets/css/__modules/_article.scss
@@ -70,6 +70,7 @@
   
   &__button {
     @include button;
+    @include button-inverse;
     width: 204px;
     text-align: center;
     margin-top: 40px;
