--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -760,12 +760,18 @@ html, body {
     letter-spacing: 2px;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    background-color: #e56b36;
+    color: #fff;
+    border: 1px solid #e56b36;
     width: 204px;
     text-align: center;
     margin-top: 40px; }
     .article__button:hover {
       background-color: #e56b36;
       color: #fff; }
+    .article__button:hover {
+      background-color: #fff;
+      color: #e56b36; }
   .article__list {
     list-style-type: none;
     counter-reset: num;
