--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -1462,6 +1462,11 @@ html, body {
     font-weight: 500;
     line-height: 158px;
     text-align: center;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
     background: #f3f3f3;
     /* Old browsers */
     background: -moz-linear-gradient(top, rgba(243, 243, 243, 0.7) 0%, rgba(230, 235, 238, 0.7) 50%, rgba(243, 243, 243, 0.7) 100%);
