--- a/_assets/css/__modules/_team.scss
+++ b/_assets/css/__modules/_team.scss
@@ -7,10 +7,13 @@
 
 .team {
   width: 100%;
+  height: 660px;
+  padding-top: 20px;
   min-width: $second-width;
   max-width: $big-width;
-  margin: 0 auto;
-  overflow: hidden;
+  margin: -20px auto 0;
+  overflow-x: hidden;
+  overflow-y: visible;
   
   &__wrapper {
     display: -webkit-flex;
@@ -18,7 +21,7 @@
     display: -ms-flex;
     display: -o-flex;
     display: flex;
-    width: 2401px;
+    width: 1600px;
     position: relative;
     left: 0;
 
@@ -27,17 +30,36 @@
     -ms-user-select: none;
     -o-user-select: none;
     user-select: none;
-    transition: left 0.5s ease-in-out;
+    //transition: left 0.5s ease-in-out;
     
   }
   &__item {
-    margin: 0 6px;
+    margin: 0 ($gutter / 2);
     font-size: 0;
     background-color: #383838;
+    box-shadow: 0 40px 20px -36px rgba(#000, 0.8);
+    transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 55px 30px -50px rgba(#000, 0.5);
+    }
+  }
+  &__link {
+    display: block;
+    height: 600px;
+    
+  }
+  &__name {
+    @include raleway (28px, 500, 28px);
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #000;
+    position: absolute;
+    margin-top: 38px;
+    margin-left: 20px;
   }
   &__photo {
     vertical-align: top;
-    
     
   }
   &__controls {
@@ -55,8 +77,9 @@
   }
   &__panel {
     position: relative;
-    height: 600px;
+    height: 680px;
     width: 108px;
+    margin-top: -20px;
     background-color: rgba(#f3f3f3, 0.8);
     display: -webkit-flex;
     display: -moz-flex;
