--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -1245,29 +1245,50 @@ html, body {
 
 .team {
   width: 100%;
+  height: 660px;
+  padding-top: 20px;
   min-width: 960px;
   max-width: 1600px;
-  margin: 0 auto;
-  overflow: hidden; }
+  margin: -20px auto 0;
+  overflow-x: hidden;
+  overflow-y: visible; }
   .team__wrapper {
     display: -webkit-flex;
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
     display: flex;
-    width: 2401px;
+    width: 1600px;
     position: relative;
     left: 0;
     -wbkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     -o-user-select: none;
-    user-select: none;
-    transition: left 0.5s ease-in-out; }
+    user-select: none; }
   .team__item {
     margin: 0 6px;
     font-size: 0;
-    background-color: #383838; }
+    background-color: #383838;
+    box-shadow: 0 40px 20px -36px rgba(0, 0, 0, 0.8);
+    transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out; }
+    .team__item:hover {
+      transform: scale(1.05);
+      box-shadow: 0 55px 30px -50px rgba(0, 0, 0, 0.5); }
+  .team__link {
+    display: block;
+    height: 600px; }
+  .team__name {
+    font-family: "Raleway", sans-serif;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 28px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #000;
+    position: absolute;
+    margin-top: 38px;
+    margin-left: 20px; }
   .team__photo {
     vertical-align: top; }
   .team__controls {
@@ -1283,8 +1304,9 @@ html, body {
     justify-content: space-between; }
   .team__panel {
     position: relative;
-    height: 600px;
+    height: 680px;
     width: 108px;
+    margin-top: -20px;
     background-color: rgba(243, 243, 243, 0.8);
     display: -webkit-flex;
     display: -moz-flex;
