отступы на маленьких экранах

--- a/_assets/css/__modules/_team.scss
+++ b/_assets/css/__modules/_team.scss
@@ -1,7 +1,7 @@
 .c-team {
   box-sizing: border-box;
   background-color: $light-gray;
-  padding: 100px 0 60px;
+  padding: 100px 30px 60px;
   min-width: $second-width;
 }
 
