--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -1240,7 +1240,7 @@ html, body {
 .c-team {
   box-sizing: border-box;
   background-color: #f3f3f3;
-  padding: 100px 0 60px;
+  padding: 100px 30px 60px;
   min-width: 960px; }
 
 .team {
