--- a/_assets/css/__modules/_menu.scss
+++ b/_assets/css/__modules/_menu.scss
@@ -28,7 +28,7 @@
     padding-top: 60px;
     
     &--is-black {
-      padding: 18px 0;
+      padding: 60px 0 30px;
       background-color: #000;
     }
   }
