--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -41,7 +41,7 @@ html, body {
   overflow: hidden;
   background-color: #000; }
   .c-header--is-black {
-    height: 83px;
+    height: 137px;
     min-height: 0; }
 
 .header {
@@ -88,7 +88,7 @@ html, body {
     margin: 0 auto;
     padding-top: 60px; }
     .menu__wrapper--is-black {
-      padding: 18px 0;
+      padding: 60px 0 30px;
       background-color: #000; }
   .menu__logo {
     flex-grow: 1;
