--- a/_assets/css/__modules/_menu-vert.scss
+++ b/_assets/css/__modules/_menu-vert.scss
@@ -1,6 +1,16 @@
 .menu-vert {
-  background-color: #e6ebee;
-  width: 320px;
+  $mw: &;
+  width: 332px;
+  
+  &--is-sticked {
+    position: fixed;
+    height: 100%;
+    overflow-y: scroll;
+    top: 137px;
+    #{$mw}__wrapper {
+      padding-top: 35px;
+    }
+  }
   
   &__wrapper {
     padding: 115px 75px 0 0;
@@ -9,13 +19,18 @@
     list-style-type: none;
   }
   &__item {
-    margin-bottom: 35px;
+    margin-bottom: 30px;
+    
   }
   &__link {
+    display: block;
+    box-sizing: border-box;
     @include raleway(16px, 500, 21px);
     color: #000;
     text-decoration: none;
+    padding-left: 12px;
     transition: color 0.2s ease-in-out;
+    border-left: 2px solid transparent;
     
     &:visited, :active, :link {
       color: #000;
@@ -26,16 +41,7 @@
     }
     
     &--is-active {
-      color: $primary-color;
-      &:before {
-        display: block;
-        content: '';
-        position: absolute;
-        margin-left: -12px;
-        width: 2px;
-        height: 21px;
-        background-color: $primary-color;
-      }
+        border-left: 2px solid $primary-color;
     }
   }
 }
