--- a/_assets/css/__modules/_article.scss
+++ b/_assets/css/__modules/_article.scss
@@ -36,6 +36,11 @@
       padding: 115px 95px 66px;
     }
   }
+  &--is-left {
+    box-sizing: border-box;
+    width: 320px;
+    padding: 115px 75px 0 0;
+  }
   &__wrapper {
     background-color: #fff;
     padding: 115px 166px 66px;
@@ -143,7 +148,54 @@
     margin-bottom: 20px;
     margin-left: 35px;
   }
-}
+  
+  &__form {
+    width: 472px;
+  }
+  &__input {
+    box-sizing: border-box;
+    width: 100%;
+    height: 62px;
+    padding-left: 25px;
+    margin-bottom: 20px;
+    
+    background-color: $light-gray;
+    
+    @include raleway(16px, 400, 24px);
+    letter-spacing: 0.5px;
+    color: #000;
+    outline: 2px solid transparent;
+    transition: outline-color 0.2s ease-in-out;
+    
+    &:focus {
+      background-color: #fff;
+      outline: 2px solid $primary-color;
+    }
+    
+    &--is-textarea {
+      height: 143px;
+      padding-top: 22px;
+    } 
+  }
+  &__submit {
+    @include button;
+    @include button-inverse;
+    display: inline-block;
+    margin-right: 10px;
+    margin-top: 20px;
+    &:focus {
+      outline: none;
+    }
+  }
+  &__reset {
+    @include button;
+    display: inline-block;
+    margin-top: 20px;
+    &:focus {
+      outline: none;
+    }
+  }
+}  
 
 .icons {
   $s: &;
@@ -348,3 +400,5 @@
     }
   }
 }
+
+
