--- a/_assets/css/__modules/_popup.scss
+++ b/_assets/css/__modules/_popup.scss
@@ -1,13 +1,18 @@
 .popup {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.85);
   height: 100%;
   width: 100%;
   z-index: 1000;
   cursor: pointer;
+  transition: visibility 0s linear 0.3s, opacity 0.3s ease-in-out;
+  
   &--is-visible {
-    display: block;
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0s linear 0s, opacity 0.3s ease-in-out;
   }
   
   &__frame {
