--- a/_assets/css/__modules/_caption.scss
+++ b/_assets/css/__modules/_caption.scss
@@ -15,6 +15,9 @@
   &--is-inside {
     max-width: 970px;
   }
+  &--into {
+    margin-top: 100px;
+  }
   
   &__wrapper {
     display: -webkit-flex;
