--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -375,6 +375,8 @@ html, body {
   flex-wrap: wrap; }
   .caption--is-inside {
     max-width: 970px; }
+  .caption--into {
+    margin-top: 100px; }
   .caption__wrapper {
     display: -webkit-flex;
     display: -moz-flex;
@@ -433,7 +435,9 @@ html, body {
   display: flex; }
   .programs__item {
     display: block;
-    margin-right: 13px; }
+    margin-right: 13px;
+    min-width: 216px;
+    width: 331px; }
     .programs__item:last-child {
       margin-right: 0; }
   .programs__link {
@@ -444,10 +448,12 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    flex-grow: 1;
     box-sizing: border-box;
     padding: 48px;
     max-width: 331px;
     height: 600px;
+    min-width: 216px;
     background-color: #000;
     background-size: cover;
     background-position: center center;
@@ -459,13 +465,16 @@ html, body {
       transform: scale(1.05);
       box-shadow: 0 55px 30px -50px rgba(0, 0, 0, 0.5); }
     .programs__link--is-fuse {
-      background-image: url(../img/_programs/fuse_bg.jpg); }
+      background-image: url(../img/_programs/fuse_coming_bg.jpg); }
     .programs__link--is-trx {
       background-image: url(../img/_programs/trx_bg.jpg); }
     .programs__link--is-barre {
       background-image: url(../img/_programs/barre_bg.jpg); }
     .programs__link--is-yoga {
       background-image: url(../img/_programs/yoga_bg.jpg); }
+    .programs__link--is-passive:hover {
+      transform: none;
+      box-shadow: 0 40px 20px -36px rgba(0, 0, 0, 0.8); }
   .programs__caption {
     font-family: "Raleway", sans-serif;
     font-size: 28px;
@@ -1565,14 +1574,37 @@ html, body {
       padding-right: 30px;
       background-color: #fff; }
     .l-container__column--is-yoga {
-      background-image: url(../img/_yoga/yoga_bg.jpg);
+      background-image: url(../img/_yoga/yoga_bg-2.jpg);
       background-size: cover;
       background-repeat: no-repeat; }
-    .l-container__column--is-team-angelina {
-      background-image: url(../img/_team/_personal/angelina/angelina.jpg);
+    .l-container__column--is-trx {
+      background-image: url(../img/_trx/trx_bg.jpg);
+      background-size: cover;
+      background-repeat: no-repeat; }
+    .l-container__column--is-barre {
+      background-image: url(../img/_barre/barre_bg.jpg);
+      background-size: cover;
+      background-repeat: no-repeat; }
+    .l-container__column--is-team {
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center top; }
+      .l-container__column--is-team-beram {
+        background-image: url(../img/_team/_personal/beram/beram.jpg); }
+      .l-container__column--is-team-bessler {
+        background-image: url(../img/_team/_personal/bessler/bessler.jpg); }
+      .l-container__column--is-team-chazot {
+        background-image: url(../img/_team/_personal/chazot/chazot.jpg); }
+      .l-container__column--is-team-laverde {
+        background-image: url(../img/_team/_personal/laverde/laverde.jpg); }
+      .l-container__column--is-team-lutz {
+        background-image: url(../img/_team/_personal/lutz/lutz.jpg); }
+      .l-container__column--is-team-pais {
+        background-image: url(../img/_team/_personal/pais/pais.jpg); }
+      .l-container__column--is-team-garcia {
+        background-image: url(../img/_team/_personal/garcia/garcia.jpg); }
+      .l-container__column--is-team-tetah {
+        background-image: url(../img/_team/_personal/tetah/tetah.jpg); }
     .l-container__column--has-nopad {
       padding-left: 0; }
 
