--- a/_assets/css/__modules/_slider.scss
+++ b/_assets/css/__modules/_slider.scss
@@ -52,6 +52,9 @@
       &-fourth {
         background-image: url(../img/_header/slide_bg_4.jpg);
       }
+      &-yoga {
+        background-image: url(../img/_header/slide_bg_yoga.jpg);
+      }
     }
   }
 }
