--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -236,6 +236,8 @@ html, body {
       background-image: url(../img/_header/slide_bg_3.jpg); }
     .slider__slide--is-fourth {
       background-image: url(../img/_header/slide_bg_4.jpg); }
+    .slider__slide--is-yoga {
+      background-image: url(../img/_header/slide_bg_yoga.jpg); }
 
 .hero {
   max-width: 1360px;
