--- a/_assets/css/__modules/_menu.scss
+++ b/_assets/css/__modules/_menu.scss
@@ -106,6 +106,11 @@
         margin-top: 10px;
       }
     }
+    &--is-passive {
+      &:hover {
+        color: rgba(#fff, 0.4);
+      }
+    }
     
   }
   &__language {
