--- a/_assets/css/__modules/_l-container.scss
+++ b/_assets/css/__modules/_l-container.scss
@@ -128,7 +128,7 @@
         &-laverde {
           background-image: url(../img/_team/_personal/laverde/laverde.jpg);   
         }
-        &-lutz {
+        &-delmenico {
           background-image: url(../img/_team/_personal/lutz/lutz.jpg);   
         }
         &-pais {
