фотки на главной

--- a/_assets/css/__modules/_programs.scss
+++ b/_assets/css/__modules/_programs.scss
@@ -63,7 +63,7 @@
     
     &--is{
       &-fuse {
-        background-image: url(../img/_programs/fuse_coming_bg.jpg);
+        background-image: url(../img/_programs/fuse_bg.jpg);
       }
       &-trx {
         background-image: url(../img/_programs/trx_bg.jpg);
