--- a/_assets/css/__modules/_programs.scss
+++ b/_assets/css/__modules/_programs.scss
@@ -63,16 +63,16 @@
     
     &--is{
       &-fuse {
-        background-image: url(../img/_programs/fuse_bg.jpg);
+        background-image: url(../img/_programs/prog_fuse.jpg);
       }
       &-trx {
         background-image: url(../img/_programs/trx_bg.jpg);
       }
       &-barre {
-        background-image: url(../img/_programs/barre_bg.jpg);
+        background-image: url(../img/_programs/prog_barre.jpg);
       }
       &-yoga {
-        background-image: url(../img/_programs/yoga_bg.jpg);
+        background-image: url(../img/_programs/prog_yoga.jpg);
       }
       &-passive {
         &:hover {
